--- a/Prezentacja/MainWindow.xaml
+++ b/Prezentacja/MainWindow.xaml
@@ -4,9 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Prezentacja" xmlns:view="clr-namespace:Prezentacja.View"
+        xmlns:vms="clr-namespace:Prezentacja.ModelView" d:DataContext="{d:DesignInstance Type=vms:MainModelView}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <view:amountOfBall DataContext="{Binding CurrentViewModel}"/>
+        <Grid.Resources>
+            <DataTemplate DataType="{x:Type vms:amountOfBallViewModel}">
+                <view:amountOfBall/>
+            </DataTemplate>
+        </Grid.Resources>
+        <ContentControl Content="{Binding CurrentViewModel}"/>
     </Grid>
 </Window>
