--- a/Prezentacja/View/amountOfBall.xaml
+++ b/Prezentacja/View/amountOfBall.xaml
@@ -32,7 +32,7 @@
             <TextBox
                 Grid.Row="0"
                 Grid.Column="1"
-                Text="{Binding Amount}"
+                Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}"
                 Width="50"
                 Margin="20 0 0 0"
                 FontSize="24"
@@ -66,7 +66,7 @@
                 Grid.Row="0"
                 Grid.Column="1"
                 FontSize="24"
-                Text="{Binding Amount}"/>   
+                Text="{Binding Amount,UpdateSourceTrigger=PropertyChanged}"/>   
         </Grid>
 
 
