--- a/Prezentacja/MainWindow.xaml
+++ b/Prezentacja/MainWindow.xaml
@@ -12,6 +12,9 @@
             <DataTemplate DataType="{x:Type vms:amountOfBallViewModel}">
                 <view:amountOfBall/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type vms:boardViewModel}">
+                <view:boardWindow/>
+            </DataTemplate>
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}"/>
     </Grid>
