--- a/Prezentacja/View/amountOfBall.xaml
+++ b/Prezentacja/View/amountOfBall.xaml
@@ -10,6 +10,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -69,6 +70,7 @@
                 Text="{Binding Amount,UpdateSourceTrigger=PropertyChanged}"/>   
         </Grid>
 
+        
 
 
 
