--- a/Prezentacja/View/amountOfBall.xaml
+++ b/Prezentacja/View/amountOfBall.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Prezentacja.View"
+             xmlns:local="clr-namespace:Prezentacja.View" xmlns:modelview="clr-namespace:Prezentacja.ModelView" d:DataContext="{d:DesignInstance Type=modelview:amountOfBallViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid >
@@ -33,7 +33,7 @@
                 Grid.Column="0"
                 FontSize="12
 "
-                Text="Podaj liczbe kul"/>
+                Text="Podaj liczbe kul "/>
 
             <TextBox
                 Grid.Row="0"
@@ -77,7 +77,7 @@
         <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
             <ItemsControl x:Name="SpaceObjectsIC"
                       Grid.Row="0" Grid.Column="0"
-                      ItemsSource="{Binding Path=SampleData , Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Height="600" VerticalAlignment="Top">
+                      ItemsSource="{Binding Path=generatedBalls , Mode=OneWay, UpdateSourceTrigger=PropertyChanged, NotifyOnTargetUpdated=True}" Height="600" VerticalAlignment="Top">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <Canvas Background="LightGray" Width="800" Height="600" />
@@ -87,7 +87,8 @@
                     <DataTemplate>
                         <Ellipse Fill="red" Width="{Binding Radius}" Height="{Binding Radius}">
                             <Ellipse.RenderTransform>
-                                <TranslateTransform X="{Binding X}" Y="{Binding Y}" />
+                                <TranslateTransform X="{Binding X, UpdateSourceTrigger=PropertyChanged, NotifyOnTargetUpdated=True}" 
+                                                    Y="{Binding Y, UpdateSourceTrigger=PropertyChanged, NotifyOnTargetUpdated=True}" />
                             </Ellipse.RenderTransform>
                         </Ellipse>
                     </DataTemplate>
