--- a/Prezentacja/View/amountOfBall.xaml
+++ b/Prezentacja/View/amountOfBall.xaml
@@ -5,7 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prezentacja.View" xmlns:modelview="clr-namespace:Prezentacja.ModelView" d:DataContext="{d:DesignInstance Type=modelview:amountOfBallViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="#666"
+             Foreground="AliceBlue">
+
     <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="453"/>
@@ -17,8 +20,10 @@
             <ColumnDefinition Width="3*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0" Margin="0,0,12,181">
+        <Grid Grid.Row="0" Grid.Column="0" Margin="10,20,12,181">
             <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -33,27 +38,27 @@
                 Grid.Column="0"
                 FontSize="12
 "
-                Text="Podaj liczbe kul "/>
+                Text="Podaj liczbe kul  " Margin="0,0,0,20" Grid.RowSpan="2"/>
 
             <TextBox
-                Grid.Row="0"
-                Grid.Column="1"
+                Grid.Row="1"
+                Grid.Column="0"
                 Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}"
-                Width="50"
-                FontSize="12"
+                FontSize="12" RenderTransformOrigin="0.502,0.51" Margin="14,25,14,2" Grid.RowSpan="1"
             />
 
             <Button
-                Grid.Row="0"
-                Grid.Column="2"
-                Content="Submit"
+                Grid.Row="2"
+                Grid.Column="0"
+                Content="Dodaj"
                 Width="60"
-                Command="{Binding submitCommand}"
+                Command="{Binding submitCommand}" RenderTransformOrigin="0.871,2.305" Margin="14,13,14,-13"
                 />
         </Grid>
 
-        <Grid Grid.Column="0" Grid.ColumnSpan="2" Margin="10,300,590,6" >
+        <Grid Grid.Column="0" Grid.ColumnSpan="2" Margin="12,300,590,6" >
             <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -66,12 +71,13 @@
         Grid.Row="0"
         Grid.Column="0"
         FontSize="12"
-        Text="Podales:" />
+        Text="Podales " />
 
             <TextBlock
-                Grid.Row="0"
+                Grid.Column="0"
+                Grid.Row="1"
                 FontSize="12"
-                Text="{Binding Amount,UpdateSourceTrigger=PropertyChanged}" Margin="43,0,0,0" />
+                Text="{Binding Amount,UpdateSourceTrigger=PropertyChanged}" Margin="15,0,0,0" />
         </Grid>
 
         <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
@@ -80,7 +86,11 @@
                       ItemsSource="{Binding Path=generatedBalls , Mode=OneWay, UpdateSourceTrigger=PropertyChanged, NotifyOnTargetUpdated=True}" Height="600" VerticalAlignment="Top">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <Canvas Background="LightGray" Width="800" Height="600" Margin="0,10,0,0" />
+                        <Canvas Background="LightGray" Width="800" Height="600" Margin="0,10,0,0">
+                            <Canvas.Effect>
+                                <DropShadowEffect Color="Black" Direction="315" ShadowDepth="5" Opacity="0.5" BlurRadius="15"/>
+                            </Canvas.Effect>
+                        </Canvas>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
@@ -90,6 +100,9 @@
                                 <TranslateTransform X="{Binding XLocation, UpdateSourceTrigger=PropertyChanged, NotifyOnTargetUpdated=True}" 
                                                     Y="{Binding YLocation, UpdateSourceTrigger=PropertyChanged, NotifyOnTargetUpdated=True}" />
                             </Ellipse.RenderTransform>
+                            <Ellipse.Effect>
+                                <DropShadowEffect Color="Black" Direction="315" ShadowDepth="5" Opacity="0.3" BlurRadius="{Binding Radius}"/>
+                            </Ellipse.Effect>
                         </Ellipse>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
